kubernetes/apps/observability/kube-prometheus-stack/app/securitypolicies.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: alertmanager
spec:
  extAuth:
    failOpen: false
    headersToExtAuth:
      - cookie
    http:
      backendRefs:
        - name: ak-outpost-proxy-outpost
          namespace: security
          port: 9000
      path: /outpost.goauthentik.io/auth/envoy
      headersToBackend:
        - set-cookie
        - x-authentik-username
        - x-authentik-groups
        - x-authentik-email
        - x-authentik-name
        - x-authentik-uid
        - authorization
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: kube-prometheus-stack-alertmanager
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: prometheus
spec:
  extAuth:
    failOpen: false
    headersToExtAuth:
      - cookie
    http:
      backendRefs:
        - name: ak-outpost-proxy-outpost
          namespace: security
          port: 9000
      path: /outpost.goauthentik.io/auth/envoy
      headersToBackend:
        - set-cookie
        - location
        - x-authentik-username
        - x-authentik-groups
        - x-authentik-email
        - x-authentik-name
        - x-authentik-uid
        - authorization
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: kube-prometheus-stack-prometheus
