kubernetes/apps/observability/kube-prometheus-stack/app/securitypolicy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: prometheus-tinyauth
spec:
  extAuth:
    failOpen: false
    headersToExtAuth:
      - X-Forwarded-For
      - X-Forwarded-Host
      - X-Forwarded-Proto
      - X-Forwarded-Uri
      - accept
      - cookie
      - user-agent
    http:
      backendRefs:
        - name: tinyauth
          namespace: security
          port: 3000
      path: /api/auth/envoy
      headersToBackend:
        - Location
        - Set-Cookie
  targetRefs:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: kube-prometheus-stack-prometheus
